added links to main nav, added named routes for links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 
 <nav class='main-nav'>
   <ul>
-    <li>Home</li>
-    <li>Subscribe</li>
-    <li>Sponsor</li>
-    <li>About</li>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Subscribe", subscribe_path %></li>
+    <li><%= link_to "Sponsor", sponsor_path %></li>
+    <li><%= link_to "About", about_path %></li>
   </ul>
 </nav>
 
