--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,7 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 
-<nav class='main-nav'>
-  <ul>
-    <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "Subscribe", subscribe_path %></li>
-    <li><%= link_to "Sponsor", sponsor_path %></li>
-    <li><%= link_to "About", about_path %></li>
-  </ul>
-</nav>
-
-
+<%= render 'layouts/nav' %>
 <%= yield %>
 
 </body>
