--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,6 +4,9 @@
     <li><%= link_to "Subscribe", subscribe_path %></li>
     <li><%= link_to "Sponsor", sponsor_path %></li>
     <li><%= link_to "About", about_path %></li>
+    <% if user_signed_in? %>
+      <li><%= link_to "Sign Out", signout_path %></li>
+    <% end %>
   </ul>
 </nav>
 
