added timestamps to posts.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,7 +35,7 @@
        <tr class="file_link">
          <td><b>Link:&#32</b><%= post.file_link %></td></tr>
        <tr class="posted_by">
-         <td><b>Posted By:&#32</b></td></tr>
+         <td><b>Posted By:&#32</b><%= post.user %></td></tr>
      <% end %>
      <tr><td><p></td></tr>
      <tr><td><p></td></tr>
