--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to "Sponsor", sponsor_path %></li>
     <li><%= link_to "About", about_path %></li>
     <% if user_signed_in? %>
+      <li><%= link_to "New Post", newpost_path %></li>
       <li><%= link_to "Sign Out", signout_path %></li>
     <% end %>
   </ul>
