--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
-<nav class='main-nav'>
+<nav class="sidebar-nav-fixed" role="navigation">
   <ul>
-    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "Home", root_path %><li>
     <li><%= link_to "Subscribe", subscribe_path %></li>
     <li><%= link_to "Sponsor", sponsor_path %></li>
     <li><%= link_to "About", about_path %></li>
