--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="sidebar-nav-fixed" role="navigation">
-  <ul>
+<nav class="col-md-3" role="navigation">
+  <ul class="nav nav-pills nav-stacked">
     <li><%= link_to "Home", root_path %><li>
     <li><%= link_to "Subscribe", subscribe_path %></li>
     <li><%= link_to "Sponsor", sponsor_path %></li>
