--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tbody>
     <% @post.each do |post| %>
-     <tr class="title"> 
+     <tr class="header-title"> 
        <td><h2><%= post.title %></h2></td>
      </tr>
      <tr class="notes">
