--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,13 +1,17 @@
-<nav class="col-md-3" role="navigation">
-  <ul class="nav nav-pills nav-stacked">
-    <li><%= link_to "Home", root_path %><li>
-    <li><%= link_to "Subscribe", subscribe_path %></li>
-    <li><%= link_to "Sponsor", sponsor_path %></li>
-    <li><%= link_to "About", about_path %></li>
-    <% if user_signed_in? %>
-      <li><%= link_to "New Post", newpost_path %></li>
-      <li><%= link_to "Sign Out", signout_path %></li>
-    <% end %>
-  </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid"> 
+    <div class="navbar-header"> 
+      <ul class="nav nav-pills">
+        <li><%= link_to "Home", root_path %><li>
+        <li><%= link_to "Subscribe", subscribe_path %></li>
+        <li><%= link_to "Sponsor", sponsor_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "New Post", newpost_path %></li>
+          <li><%= link_to "Sign Out", signout_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div
 </nav>
 
