--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,31 @@
 </head>
 <body>
   <div class="container">
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-
-    <div class="col-md-6">
-      <%= yield %>
+    <div class="row">  
+      <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
     </div>
-
-  <%= render 'layouts/nav' %>
+  
+    <nav class="navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <ul class="nav nav-pills">
+          <li><%= link_to "Home", root_path %><li>
+          <li><%= link_to "Subscribe", subscribe_path %></li>
+          <li><%= link_to "Sponsor", sponsor_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "New Post", newpost_path %></li>
+            <li><%= link_to "Sign Out", signout_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+  <div class="container-fluid">
+    <%= yield %>
   </div>
 </body>
 </html>
