--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,24 +1,45 @@
 <h1>New Post</h1>
-
-<%= form_for(@post) do |f| %>
-   <%= f.label :title %>
-   <%= f.text_field :title %>
-<p>
-   <%= f.label :notes %>
-   <%= f.text_field :notes %>
-<p>
-   <%= f.label :guests %>
-   <%= f.text_field :guests %>
-<p>   
-   <%= f.label :sponsor %>
-   <%= f.text_field :sponsor %>
-<p>
-   <%= f.label :file_link %>
-   <%= f.text_field :file_link %>
-<p>
-   <%= f.label :posted %>
-   <%= f.check_box :posted %>
-<p>
-   <%= f.label :notes %>
-   <%= f.submit "Create Post" %>
-<% end %> 
+  
+  <%= form_for @post, :html => {:class => "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%= f.label :title, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10"> 
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :notes, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_area :notes, class: "form-control", rows: 15 %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :guests, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10"> 
+        <%= f.text_area :guests, class: 'form-control', rows: 3 %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :sponsor, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_area :sponsor, class: 'form-control', rows: 3 %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :file_link, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :file_link, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :posted, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.check_box :posted %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit "Create Post", class: "btn btn-default" %>
+      </div>
+    </div>
+  <% end %> 
