--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,38 +2,26 @@
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
+  <link href='http://fonts.googleapis.com/css?family=Advent+Pro:700,600,400,200,100' rel='stylesheet' type='text/css'> 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %> 
 </head>
 <body>
-  <div class="container">
-    <div class="row">  
-      <% if notice %>
-        <p class="alert alert-success"><%= notice %></p>
-      <% end %>
-      <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
-    </div>
-  
-    <nav class="navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <ul class="nav nav-pills">
-          <li><%= link_to "Home", root_path %><li>
-          <li><%= link_to "Subscribe", subscribe_path %></li>
-          <li><%= link_to "Sponsor", sponsor_path %></li>
-          <li><%= link_to "About", about_path %></li>
-          <% if user_signed_in? %>
-            <li><%= link_to "New Post", newpost_path %></li>
-            <li><%= link_to "Sign Out", signout_path %></li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
-  <div class="container-fluid">
-    <%= yield %>
+
+  <div class="row">  
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
   </div>
+ 
+  <%= render 'layouts/nav' %>
+ 
+  <%= yield %>
+
 </body>
 </html>
