--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,13 +16,15 @@
     <div class="form-group">
       <%= f.label :guests, class: "col-sm-2 control-label" %>
       <div class="col-sm-10"> 
-        <%= f.text_area :guests, class: 'form-control', rows: 3 %>
+        <%= f.text_area :guests, class: 'form-control', rows: 3,
+                        placeholder: "Leave Blank for None"%>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :sponsor, class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_area :sponsor, class: 'form-control', rows: 3 %>
+        <%= f.text_area :sponsor, class: 'form-control',
+                         rows: 3, placeholder: "Leave Blank for None" %>
       </div>
     </div>
     <div class="form-group">
