--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,8 @@
 <nav class="navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
+    <audio controls>
+      <source src="http://whatevery.podbean.com/mf/web/8h564b/test_ep00.mp3" type="audio/mp3">
+    </audio>
     <ul class="nav nav-pills">
       <li><%= link_to "Home", root_path %><li>
       <li><%= link_to "Subscribe", subscribe_path %></li>
