--- a/app/views/static_pages/sponsor.html.erb
+++ b/app/views/static_pages/sponsor.html.erb
@@ -1,4 +1,10 @@
 <% provide(:title, "Sponsor") %>
 
-<h1>Sponsor</h1>
-<p>So you want to sponsor Whatevery? Great, you'll reach a diverse crowd of comic enthusiasts with great taste in beer.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 plmarg sptmarg">
+      <h1>Sponsor</h1>
+      <p>So you want to sponsor Whatevery? Great, you'll reach a diverse crowd of comic enthusiasts with great taste in beer.</p>
+    </div>
+  </div>
+</div>
