--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -1,8 +1,14 @@
 <% provide(:title, "Subscribe") %>
 
-<h1>Subscribe</h1>
-<p>You can subscribe here:</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 plmarg sptmarg">
+      <h1>Subscribe</h1>
+      <p>You can subscribe here:</p>
 
-<p>iTunes:</p>
-<p>Stitcher:</p>
-<p>RSS:</p>
+      <p>iTunes:</p>
+      <p>Stitcher:</p>
+      <p>RSS:</p>
+    </div
+  </div>
+</div>
