--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,9 @@
 <div class="jumbotron">
   <h1>whatevery</h1>
-  <p>A show for nerds!</p>
+  <p>A podcast for your nerdy addictions.</p> 
 </div>
+
+
 
 <div class="container">
   <div class="row">
