--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Advent+Pro:700,600,400,200,100' rel='stylesheet' type='text/css'> 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'mejs-whatevery', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %> 
@@ -24,5 +25,15 @@
  
   <%= yield %>
 
+  <script>
+    $('audio,video').mediaelementplayer({
+      success: function(player, node) {
+        $('#' + node.id + '-mode').html('mode: ' + player.pluginType);
+       },
+       features: ['playpause', 'progress', 'current', 'duration', 'tracks', 'volume'],
+       startLanuage: 'en',
+       translationSelector: true
+     });
+  </script>
 </body>
 </html>
