--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <div class="jumbotron">
+  <%= image_tag "wp_logo3.png" %> 
   <h1>whatevery</h1>
   <p>A podcast for your nerdy addictions.</p> 
 </div>
