--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,6 @@
   <%= render 'layouts/shim' %> 
 </head>
 <body>
-
   <div class="row">  
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
@@ -20,10 +19,12 @@
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
   </div>
- 
   <%= render 'layouts/nav' %>
  
-  <%= yield %>
+  <div class="sptmarg">
+   <%= yield %>
+  </div>
+  
 
   <script>
     $('audio,video').mediaelementplayer({
