--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,47 +1,59 @@
-<h1>New Post</h1>
-  
-  <%= form_for @post, :html => {:class => "form-horizontal"} do |f| %>
-    <div class="form-group">
-      <%= f.label :title, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10"> 
-        <%= f.text_field :title, class: "form-control" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="plmarg">
+        <h1>New Post</h1>
       </div>
+      <ul class="msgs">
+        <% @post.errors.each_with_index do |msg, i| %>
+        <li class="alert alert-danger"><%= msg[1] %></li>
+        <% end %>
+      </ul> 
+      <%= form_for @post, :html => {:class => "form-horizontal"} do |f| %>
+        <div class="form-group">
+          <%= f.label :title, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10"> 
+            <%= f.text_field :title, class: "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :notes, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_area :notes, class: "form-control", rows: 15 %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :guests, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10"> 
+            <%= f.text_area :guests, class: 'form-control', rows: 3,
+                            placeholder: "Leave Blank for None"%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :sponsor, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_area :sponsor, class: 'form-control',
+                             rows: 3, placeholder: "Leave Blank for None" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :file_link, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_field :file_link, class: 'form-control' %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :posted, class: "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.check_box :posted %>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <%= f.submit "Create Post", class: "btn btn-default" %>
+          </div>
+        </div>
+      <% end %> 
     </div>
-    <div class="form-group">
-      <%= f.label :notes, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_area :notes, class: "form-control", rows: 15 %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :guests, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10"> 
-        <%= f.text_area :guests, class: 'form-control', rows: 3,
-                        placeholder: "Leave Blank for None"%>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :sponsor, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_area :sponsor, class: 'form-control',
-                         rows: 3, placeholder: "Leave Blank for None" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :file_link, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :file_link, class: 'form-control' %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :posted, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.check_box :posted %>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit "Create Post", class: "btn btn-default" %>
-      </div>
-    </div>
-  <% end %> 
+  </div>
+ </div> 
