user real names added and viewable on post index.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -44,7 +44,7 @@
              <tr class="file_link">
                <td><b>Link:&#32</b><%= post.file_link %></td></tr>
              <tr class="posted_by">
-               <td><b>Posted By:&#32</b><%= post.user %></td></tr>
+               <td><b>Posted By:&#32</b><%= post.user.firstname %></td></tr>
            <% end %>
            <tr class="postbreak"><td><p></td></tr>
           <% end %>
