destroy action not working correctly for posts, but have updated views and added form shim.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -108,6 +108,15 @@ body {
   list-style: none;
 }
 
+.editlink {
+  display: inline-block;
+}
+
+.editlink a {
+  color: $orange;
+  padding-left: 20px;
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
   .jumbotron h1, .jumbotron .h1 {
