--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,12 @@
         <tbody>
           <% @post.each do |post| %>
            <tr class="header-title"> 
-             <td><h2><%= post.title %></h2></td>
+             <td><h2 class="editlink"><%= post.title %></h2>
+               <% if user_signed_in? %> 
+                  <p class="editlink"><%= link_to 'Edit Post', edit_post_path(post) %></p>
+                  <p class="editlink"><%= link_to 'Delete Post', post, :confirm => 'Are you sure you want to delete the post?', :method => :delete %></p>
+               <% end %>
+             </td>
            </tr>
            <tr class="notes">
              <td><%= markdown(post.notes) %></td>
