--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <%= f.submit "Create Post", class: "btn btn-default" %>
+            <%= f.submit "Save Post", class: "btn btn-default" %><%= link_to 'Cancel', posts_path, { :style=>'margin-left: 30px;', :class=> "btn btn-danger"} %>
           </div>
         </div>
       <% end %> 
