--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,10 @@
-<div class="jumbotron">
-  <%= image_tag "wp_logo3.png" %> 
-  <h1>whatevery</h1>
-  <p>A podcast for your nerdy addictions.</p> 
+<div class="row">
+  <div class="jumbotron">
+    <%= image_tag "wp_logo3.png" %> 
+    <h1>whatevery</h1>
+    <p>A podcast for your nerdy addictions.</p> 
+  </div>
 </div>
-
-
-
 <div class="container">
   <div class="row">
     <div class="col-sm-10 plmarg">
@@ -13,10 +12,11 @@
         <tbody>
           <% @post.each do |post| %>
            <tr class="header-title"> 
-             <td><h2 class="editlink"><%= post.title %></h2>
+             <td><h2 class="titlelink"><%= link_to "#{post.title}", post %></h2>
                <% if user_signed_in? %> 
                   <p class="editlink"><%= link_to 'Edit Post', edit_post_path(post) %></p>
-                  <p class="editlink"><%= link_to 'Delete Post', post, :confirm => 'Are you sure you want to delete the post?', :method => :delete %></p>
+                  <p class="editlink"><%= link_to 'Delete Post', post, method: :delete, 
+                                                                       data: { :confirm => 'Are you sure you want to delete the post?' } %></p>
                <% end %>
              </td>
            </tr>
@@ -30,7 +30,7 @@
                <td><h4 class="postsep">Joining us this week:</h4></td> 
              </tr>
              <tr class="guests"> 
-               <td><%= post.guests %></td>
+               <td><%= markdown(post.guests) %></td>
              </tr>
            <% end %>
            <% if post.sponsor == '' %>
@@ -39,7 +39,7 @@
                <td><h4 class="postsep">Brought to you by:</h4></td>
              </tr> 
              <tr class="sponsor">
-               <td><%= post.sponsor %></td>
+               <td><%= markdown(post.sponsor) %></td>
              </tr>
            <% end %>
            <% if user_signed_in? %> 
@@ -47,7 +47,7 @@
              <tr class="posted">
                <td><b>Posted:&#32</b><%= post.posted %></td></tr>
              <tr class="file_link">
-               <td><b>Link:&#32</b><%= post.file_link %></td></tr>
+               <td><b>Link:&#32</b><%= link_to "#{post.file_link}", post.file_link %></td></tr>
              <tr class="posted_by">
                <td><b>Posted By:&#32</b><%= post.user.firstname %></td></tr>
            <% end %>
