--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,42 +1,51 @@
-<h1><%= link_to "Whatevery", root_path %></h1>
-
-<table>
-  <tbody>
-     <tr class="title"> 
-       <td><h2><%= @post.title %></h2></td>
-     </tr>
-     <tr class="notes">
-       <td><%= @post.notes %></td>
-     </tr>
-     <tr class="guests">
-     <% if @post.guests == '' %>
-     <% else %>
-       <tr class="guests">
-         <td><h3>Joining us this week:</h3></td> 
-       </tr>
-       <tr class="guests"> 
-         <td><%= @post.guests %></td>
-       </tr>
-     <% end %>
-     <% if @post.sponsor == '' %>
-     <% else %>
-       <tr class="sponsor">
-         <td><h3>Brought to you by:</h3></td>
-       </tr> 
-       <tr class="sponsor">
-         <td><%= @post.sponsor %></td>
-       </tr>
-     <% end %>
-     <% if user_signed_in? %> 
-       <tr><td></td></tr> 
-       <tr class="posted">
-         <td><b>Posted:&#32</b><%= @post.posted %></td></tr>
-       <tr class="file_link">
-         <td><b>Link:&#32</b><%= @post.file_link %></td></tr>
-       <tr class="posted_by">
-         <td><b>Posted By:&#32</b><%= @post.user %></td></tr>
-     <% end %>
-     <tr><td><p></td></tr>
-     <tr><td><p></td></tr>
-  </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 plmarg">
+      <table>
+        <tbody>
+           <tr class="header-title"> 
+             <td><h2 class="titlelink"><%= @post.title %></h2>
+               <% if user_signed_in? %> 
+                  <p class="editlink"><%= link_to 'Edit Post', edit_post_path(@post) %></p>
+                  <p class="editlink"><%= link_to 'Delete Post', @post, method: :delete, 
+                                                                       data: { :confirm => 'Are you sure you want to delete the post?' } %></p>
+               <% end %>
+             </td>
+           </tr>
+           <tr class="notes">
+             <td><%= markdown(@post.notes) %></td>
+           </tr>
+           <tr class="guests">
+           <% if @post.guests == '' %>
+           <% else %>
+             <tr class="guests">
+               <td><h4 class="postsep">Joining us this week:</h4></td> 
+             </tr>
+             <tr class="guests"> 
+               <td><%= markdown(@post.guests) %></td>
+             </tr>
+           <% end %>
+           <% if @post.sponsor == '' %>
+           <% else %>
+             <tr class="sponsor">
+               <td><h4 class="postsep">Brought to you by:</h4></td>
+             </tr> 
+             <tr class="sponsor">
+               <td><%= markdown(@post.sponsor) %></td>
+             </tr>
+           <% end %>
+           <% if user_signed_in? %> 
+             <tr><td></td></tr> 
+             <tr class="posted">
+               <td><b>Posted:&#32</b><%= @post.posted %></td></tr>
+             <tr class="file_link">
+               <td><b>Link:&#32</b><%= link_to "#{@post.file_link}", @post.file_link %></td></tr>
+             <tr class="posted_by">
+               <td><b>Posted By:&#32</b><%= @post.user.firstname %></td></tr>
+           <% end %>
+           <tr class="postbreak"><td><p></td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
