--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg sptmarg">
+    <div class="col-sm-10 plmarg">
       <h1>About</h1>
       <p>Matt and Eddie are comic nerds with an affinity for technology, pop culture, beer and metal. Not usually in that order.</p>
     </div>
