--- a/app/views/static_pages/sponsor.html.erb
+++ b/app/views/static_pages/sponsor.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg sptmarg">
+    <div class="col-sm-10 plmarg">
       <h1>Sponsor</h1>
       <p>So you want to sponsor Whatevery? Great, you'll reach a diverse crowd of comic enthusiasts with great taste in beer.</p>
     </div>
