--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -2,13 +2,13 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg sptmarg">
+    <div class="col-sm-10 plmarg">
       <h1>Subscribe</h1>
       <p>You can subscribe here:</p>
 
       <p>iTunes:</p>
       <p>Stitcher:</p>
       <p>RSS:</p>
-    </div
+    </div>
   </div>
 </div>
