--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,35 @@
           border-radius: $radius;
 }
 
+@mixin fade-in($seconds) {
+    -webkit-animation: fadeIn ease-in 1; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadeIn ease-in 1; /* Firefox < 16 */
+        -ms-animation: fadeIn ease-in 1; /* Internet Explorer */
+         -o-animation: fadeIn ease-in 1; /* Opera < 12.1 */
+            animation: fadeIn ease-in 1;
+    -webkit-animation-fill-mode: forwards;
+       -moz-animation-fill-mode: forwards;
+        -ms-animation-fill-mode: forwards;
+         ao-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+
+    -webkit-animation-duration: $seconds; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation-duration: $seconds; /* Firefox < 16 */
+        -ms-animation-duration: $seconds; /* Internet Explorer */
+         ao-animation-duration: $seconds; /* Opera < 12.1 */
+            animation-duration: $seconds; 
+}
+
+@mixin anim-delay($seconds) {
+  -webkit-animation-delay: $seconds;
+     -moz-animation-delay: $seconds;
+          animation-delay: $seconds;
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 /* colors */
 
 $orange: #CC5200;
@@ -61,7 +90,7 @@ a:active {
   background: $light-orange;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Advent Pro', sans-serif;
   font-weight: 600;
 }
@@ -73,8 +102,7 @@ h1 {
 
 .editlink {
   display: inline-block;
-  padding: 0 10px;
-  margin-left: 30px;
+  padding: 0 5px;
 }
 
 a.editlink {
@@ -86,6 +114,16 @@ a.editlink:hover {
 } 
 
 
+.alert {
+  z-index: 2;
+  margin: auto;
+  left: 5%;
+  right: 5%;
+  width: 80%;
+  top: 120px;
+  position: absolute;
+}
+
 /***** style jumbotron *****/
 
 .jumbotron {
@@ -95,6 +133,14 @@ a.editlink:hover {
   padding-top: 120px;
 }
 
+.jumbotron p {
+  font-family: 'Advent Pro', sans-serif;
+  font-size: 3em;
+  font-weight: 400;
+  opacity: 0;
+  @include fade-in(1s);
+  @include anim-delay(1.5s);
+}
 
 .jumbotron h1, .jumbotron .h1 {
   color: $orange;
@@ -106,6 +152,14 @@ a.editlink:hover {
 
 .jumbotron img {
   width: 100%;
+  @include fade-in(2s);
+  @include anim-delay(0s);
+}
+
+.jumbotron h1 {
+  opacity: 0;
+  @include fade-in(2s);
+  @include anim-delay(0s);
 }
 
 /***** center a column, mostly used for mejs header/player, not currrently in use. *****/
