--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 <nav class="navbar-inverse navbar-fixed-top" role="navigation">
  <div class="row">
-   <div class="col-sm-12">
+<!--   <div class="col-sm-12">
      <%= audio_tag("#{current_ep.file_link}", controls: true, class: "mejs-wpc col-centered") %> 
-   </div>
+   </div> -->
   </div>
     <ul class="nav nav-pills">
       <li><%= link_to "Home", root_path %><li>
