--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,10 @@
 <nav class="navbar-inverse navbar-fixed-top" role="navigation">
  <div class="row">
    <div class="col-sm-12">
-     <%= audio_tag("#{current_ep}", controls: true, class: "mejs-wpc col-centered") %> 
+     <% if current_ep.nil? %> 
+     <% else %>
+       <%= audio_tag("#{current_ep}", controls: true, class: "mejs-wpc col-centered") %> 
+     <% end %>
    </div>
   </div>
     <ul class="nav nav-pills">
