changed audio nav player to conditional - won't show if no current_ep.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,6 +3,7 @@
  <div class="row">
    <div class="col-sm-12">
      <% if current_ep.nil? %> 
+        <h3>New Episode coming soon!</h3>
      <% else %>
        <%= audio_tag("#{current_ep}", controls: true, class: "mejs-wpc col-centered") %> 
      <% end %>
