Added some updated links, changed a few small layout issues, put some more detail on about page.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,9 +2,15 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg">
+    <div class="col-sm-10 plmarg postsep">
       <h1>About</h1>
-      <p>Matt and Eddie are comic nerds with an affinity for technology, pop culture, beer and metal. Not usually in that order.</p>
+      <p>Matt and Eddie are comic nerds with an affinity for technology, pop culture, beer and metal. Not usually in that order. The idea for the podcast came about when the two were catching up after a few years apart.</p>
+      <p>Whatevery aims to be a show for nerds like us who want in depth discussion of the minutae of comics, superhero shows, games, and whatevery else springs to mind.</p>
+      <h2>Links:</h2>
+      <p>Matt: <a href="http://twitter.com/thebrewtalone">@thebrewtalone</a></p>
+      <p>Eddie: <a href="http://twitter.com/charlesesmith">@charlesesmith</a></p>
+      <p>The show feed: <a href="http://twitter.com/whateveryshow">@whateveryshow</a></p>
+      <p>Facebook: <a href="http://facebook.com/whateveryshow">whateveryshow</a></p>
     </div>
   </div>
 </div>
