--- a/app/views/static_pages/sponsor.html.erb
+++ b/app/views/static_pages/sponsor.html.erb
@@ -2,9 +2,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg">
+    <div class="col-sm-10 plmarg postsep">
       <h1>Sponsor</h1>
       <p>So you want to sponsor Whatevery? Great, you'll reach a diverse crowd of comic enthusiasts with great taste in beer.</p>
+      <p>During our launch, we will be offering introductory rates for sponsors. For more details, email <a href="mailto:sponsor@whatevery.co">sponsor@whatevery.co.</a>
     </div>
   </div>
 </div>
