--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -2,13 +2,12 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg">
+    <div class="col-sm-10 plmarg postsep">
       <h1>Subscribe</h1>
       <p>You can subscribe here:</p>
 
-      <p>iTunes:</p>
-      <p>Stitcher:</p>
-      <p>RSS:</p>
+      <p>iTunes: Still in review! Check back soon!</p>
+      <p>RSS: <a href="http://whatevery.podbean.com/feed/">http://whatevery.podbean.com/feed/</a></p>
     </div>
   </div>
 </div>
