fixed the horiz scroll issue.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -137,6 +137,7 @@ a.editlink:hover {
   background-color: $gray;  
   margin-top: -50px;
   padding-top: 120px;
+  width: auto;
 }
 
 .jumbotron p {
@@ -157,7 +158,7 @@ a.editlink:hover {
 }
 
 .jumbotron img {
-  width: 100%;
+  width: 90%;
   @include fade-in(2s);
   @include anim-delay(0s);
 }
