--- a/app/assets/stylesheets/mejs-whatevery.scss
+++ b/app/assets/stylesheets/mejs-whatevery.scss
@@ -13,11 +13,11 @@ $dgray: #B0B0B8;
 }
 
 .mejs-wpc .mejs-overlay, .mejs-wpc .mejs-poster {
-  width: 100% !important;
+  width: 100%;
 }
 
 .mejs-wpc .mejs-mediaelement audio {
-  width: 100% !important
+  width: 100%;
 }
 
 .mejs-wpc .mejs-controls {
