--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 plmarg">
+    <div class="col-sm-10 plmarg postsep">
       <table>
         <tbody>
            <tr class="header-title"> 
