--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="jumbotron">
-    <%= image_tag "wp_logo3.png" %> 
-    <h1>whatevery</h1>
-    <p>A podcast for your nerdy addictions.</p> 
+    <div class="container">
+      <%= image_tag "wp_logo3.png" %> 
+      <h1>whatevery</h1>
+      <p>A podcast for your nerdy addictions.</p> 
+    </div>
   </div>
 </div>
 <div class="container">
