--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,8 @@
        </div>
      <% end %> 
     
-    <div class="col-xs-12">
-      <div class="sptmarg">
-       <%= yield %>
-      </div>
+    <div class="postsep col-xs-12">
+      <%= yield %>
     </div>
   </div> 
 
