--- a/app/assets/stylesheets/mejs-whatevery.scss
+++ b/app/assets/stylesheets/mejs-whatevery.scss
@@ -21,26 +21,66 @@ $dgray: #B0B0B8;
 }
 
 .mejs-wpc .mejs-controls {
-  background: $dgray;
+  background: $gray;
   height: 50px;
   width: 100%;
+  
 }
 
-.mejs-wpc .mejs-controls .mejs-button {
-  outline: none;
-  margin: 10px 15px;
+.mejs-wpc .mejs-controls .mejs-playpause-button {
+  margin: 0 15px;
 }
+
+.mejs-wpc .mejs-controls .mejs-playpause-button button {
+  background: url(mejs_wpc_controls.png) no-repeat 0 0;
+  height: 40px;
+  width: 35px;
+}
+
+.mejs-wpc .mejs-controls .mejs-pause button {
+  background-position: -30px;
+}
+
+.mejs-wpc .mejs-controls .mejs-volume-button button {
+  background: url(mejs_wpc_controls.png) no-repeat -65px 0px ; 
+  width: 30px;
+  height: 35px;
+}
+
+.mejs-wpc .mejs-controls .mejs-mute {
+  margin: 0 7px;
+}
+
+.mejs-wpc .mejs-controls .mejs-unmute {
+  margin: 0 7px;
+}
+
+
+.mejs-wpc .mejs-controls .mejs-unmute button {
+  background: url(mejs_wpc_controls.png) no-repeat -99px 0px ; 
+  width: 30px;
+  height: 40px;
+}
+
+/**.mejs-wpc .mejs-controls .mejs-button {
+  margin: 0px 15px;
+}**/
 
 .mejs-wpc .mejs-controls .mejs-time {
   padding: 18px 0px 0 3px;
-  font-size: 15px;
+  margin-left: -120px;
+}
+
+.mejs-wpc .mejs-controls .mejs-time span {
+  font-size: 12px;
+  color: $orange;
 }
 
 .mejs-wpc .mejs-controls .mejs-time-rail {
   padding: 0;
   padding-left: 10px;
   width: 100%;
-  padding-right: 20px;
+  padding-right: 120px;
 }
 
 .mejs-wpc .mejs-controls .mejs-time-rail span {
@@ -73,9 +113,14 @@ $dgray: #B0B0B8;
   color: #fff;
 }
 
+
+.mejs-wpc .mejs-controls .mejs-horizontal-volume-slider {
+  width: 40px;
+}
+
 .mejs-wpc .mejs-controls .mejs-horizontal-volume-slider .mejs-horizontal-volume-total, 
 .mejs-wpc .mejs-controls .mejs-horizontal-volume-slider .mejs-horizontal-volume-current {
-  top: 15px;
+  top: 18px;
   height: 18px;
   border-radius: 0;
 }
