updated iTunes link.

--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -6,7 +6,7 @@
       <h1>Subscribe</h1>
       <p>You can subscribe here:</p>
 
-      <p>iTunes: Still in review! Check back soon!</p>
+      <p>iTunes: <a href="https://itunes.apple.com/us/podcast/whatevery/id990008989?mt=2">Open in iTunes</a></p>
       <p>RSS: <a href="http://whatevery.podbean.com/feed/">http://whatevery.podbean.com/feed/</a></p>
     </div>
   </div>
