--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,8 @@
        },
        features: ['playpause', 'progress', 'current', 'duration', 'tracks', 'volume'],
        startLanuage: 'en',
-       translationSelector: true
+       translationSelector: true,
+       alwaysShowHours: true
      });
   </script>
 </body>
