fixed a link for mejs controls.

--- a/app/assets/stylesheets/mejs-whatevery.scss
+++ b/app/assets/stylesheets/mejs-whatevery.scss
@@ -28,7 +28,7 @@ $dgray: #B0B0B8;
 }
 
 .mejs-wpc .mejs-controls .mejs-playpause-button button {
-  background: url(mejs_wpc_controls.png) no-repeat 0 0;
+  background: url(mejs_wpc_controls_bl.png) no-repeat 0 0;
   height: 40px;
   width: 35px;
 }
